# mightty

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  PRD.md  README.md  WIN-HARD.md  build.rs  main.c
docs/: windows-text-rendering-notes.md
docs/specs/: 01-conpty-shell-bridge.md  02-terminal-screen-buffer.md  03-input-event-pipeline.md  04-terminal-widget.md  README.md
examples/: terminal_basic.rs
src/: feedback.rs  lib.rs  main.rs  pane.rs  pane_container.rs  split.rs
src/ghostty/: mod.rs  types.rs
src/input/: mod.rs
src/shell/: mod.rs  unix.rs  windows.rs
src/widget/: mod.rs
