[package]
name = "mightty"
version = "0.1.0"
edition = "2024"

[lib]
name = "mightty"
path = "src/lib.rs"

[[bin]]
name = "mightty"
path = "src/main.rs"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
libghostty-vt = { path = "libghostty-rs/crates/libghostty-vt" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }
