[package]
name = "mightty"
version = "0.1.0"
edition = "2024"

[lib]
name = "mightty"
path = "src/lib.rs"

[[bin]]
name = "mightty"
path = "src/main.rs"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_UI_WindowsAndMessaging",
] }
